2014-03-07  Jason Merrill  <jason@redhat.com>

	* lib/g++-dg.exp (g++-dg-runtest): Run tests in C++1y mode, too.
	* lib/target-supports.exp (check_effective_target_c++11): Now
	means C++11 and up.
	(check_effective_target_c++11_only): New.
	(check_effective_target_c++11_down): New.
	(check_effective_target_c++1y): New.
	(check_effective_target_c++1y_only): New.
	(check_effective_target_c++98_only): Rename from
	check_effective_target_c++98.
	* g++.dg/*: Use { target c++11 } instead of -std=c++11.

2014-03-07  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58609
	* g++.dg/cpp0x/constexpr-ice12.C: New.

2014-03-07  Thomas Schwinge  <thomas@codesourcery.com>

	* c-c++-common/gomp/map-1.c: Extend.

2014-03-06  Paul Thomas  <pault@gcc.gnu.org>
	    Janus Weil  <janus@gcc.gnu.org>

	PR fortran/51976
	* gfortran.dg/deferred_type_component_1.f90 : New test.
	* gfortran.dg/deferred_type_component_2.f90 : New test.

2014-03-06  Marek Polacek  <polacek@redhat.com>

	PR c/60197
	* c-c++-common/cilk-plus/CK/pr60197.c: New test.
	* c-c++-common/cilk-plus/CK/pr60197-2.c: New test.

2014-03-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/58595
	* gcc.dg/tls/pr58595.c: New test.

2014-03-06  Richard Biener  <rguenther@suse.de>

	PR middle-end/60445
	PR lto/60424
	PR lto/60427
	Revert
	2014-03-04  Paulo Matos  <paulo@matos-sorge.com>

        * gcc.dg/lto/pr55113_0.c: New testcase.

2014-03-05  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/59308
	* gcc.dg/pr46309.c: Don't compile on logical_op_short_circuit targets
	other than mips/avr.  Use -mbranch-cost=2 even for i?86/x86_64.
	* gcc.dg/tree-ssa/reassoc-32.c: Use -mbranch-cost=2 even for
	s390*/i?86/x86_64.
	* gcc.dg/tree-ssa/reassoc-33.c: Likewise.
	* gcc.dg/tree-ssa/reassoc-34.c: Likewise.
	* gcc.dg/tree-ssa/reassoc-35.c: Likewise.
	* gcc.dg/tree-ssa/reassoc-36.c: Likewise.
	* gcc.dg/tree-ssa/ssa-ifcombine-ccmp-1.c: Don't compile on
	logical_op_short_circuit targets other than avr.  Use -mbranch-cost=2