@@ -1,3 +1,10 @@
+2014-03-08  Dominique d'Humieres  <dominiq@lps.ens.fr>
+
+	PR libgfortran/60128
+	* io/write_float.def (output_float): Remove unused variable
+	nzero_real. Replace a double space with a single one.
+	(determine_en_precision): Fix wrong handling of the EN format.
+
 2014-03-03  Jerry DeLisle  <jvdelisle@gcc.gnu>
 
 	PR libfortran/60148
